--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "barber-bookings",
-  "homepage": "https://PJM-web12.github.io/Barber-Appointment-Booking/index.html",
+  "homepage": "https://PJM-web12.github.io/Barber-Appointment-Booking/Barber-Appointment-Booking/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
